feat(friends): add database-backed friends manager and UI